@startuml
'https://plantuml.com/sequence-diagram

class InventoryTracker {
    + start(Stage) : void
    + main(String[]) : void
}

class SceneManager {
    scenes: Map<String, Scene>

    load()
    getScene(String): Scene
}

class MainWindowController {
    - itemModel: ItemModel
    - sceneManager: SceneManager
    - editItemController: EditItemWindowController

    + MainWindowController(ItemModel, SceneManager,
                           EditItemWindowController)

    + initialize(URL, ResourceBundle)
    + displayList(ObservableList<Item) : void
    + showAlertWindow(String, String) : void

    'GUI Event Handlers
    onAddItemClick(ActionEvent) : void
    onEditItemClick(ActionEvent) : void
    onSaveAsClick(ActionEvent) : void
    onLoadInventoryClick(ActionEvent) : void
}

class EditItemWindowController {
    - itemModel : ItemModel
    - sceneManager : SceneManager

    + EditItemWindowController(ItemModel, SceneManager)

    + initialize() : void

    'GUI Event Handlers
    onSaveEditButtonClick(ActionEvent) : void
    onCloseButtonClick(ActionEvent) : void

}

class ItemModel {
    - ObservableList<Item>
    - currentlySelected : Item

    + setCurrentlySelected(Item) : void
    + getCurrentlySelected() : Item
    + editSelectedItem(Item) : void
    + deleteSelectedItem() : void
    + searchInventory(String, String) : ObservableList<Item>
    + checkUniqueSerial(String) : boolean
}

class Item {
    - name: SimpleStringProperty
    - serialNumber: SimpleStringProperty
    - value: SimpleDoubleProperty

    + getName() : String
    + setName(String) : void
    + nameProperty()
    + getSerialNumber() : String
    + setSerialNumber(String) : void
    + serialNumberProperty()
    + getValue() : double
    + setValue(double) : void
    + valueProperty()

    + verifySerialNumberFormat(String): boolean
    + verifyValueFormat(String) : boolean
    + verifyNameFormat(String) : boolean
}

class FileManager {
    + saveAsCSV(ItemModel, String) : boolean
    + saveAsJSON(ItemModel, String) : boolean
    + saveAsHTML(ItemModel, String) : boolean
    + saveToFile(String, String) : boolean
    + loadTSVFile(String) : ItemModel
    + loadHTMLFile(String) : ItemModel
    + loadJSONFile(String) : ItemModel
    + getBoilerplateHTML() : String
}

class Serializer {
    - serialNumber: String
    - name: String
    - value: double

    serializeToHTML(): String
}


openjfx.org.Application <|-- InventoryTracker
InventoryTracker -- SceneManager
SceneManager --- MainWindowController
SceneManager --- EditItemWindowController
MainWindowController o-- FileManager
MainWindowController o-- ItemModel
EditItemWindowController o-- ItemModel
MainWindowController o- EditItemWindowController
ItemModel *-- Item
FileManager o- Serializer

@enduml